[package]
name = "synthizer-sys"
version = "0.10.3"
authors = ["Austin Hicks <ahicks@ahicks.io>"]
edition = "2018"
description = "Low-level bindings to Synthizer, a library for 3D audio and effects"
readme = "README.md"
repository = "https://github.com/synthizer/synthizer-rs"
license = "Unlicense"
keywords = ["audio", "gamedev"]

[build-dependencies]
cmake = "0.1.45"
