[package]
name = "synthizer"
version = "0.4.1"
authors = ["Austin Hicks <ahicks@ahicks.io>"]
edition = "2018"
description = "bindings to Synthizer, a library for 3D audio and effects"
readme = "README.md"
repository = "https://github.com/synthizer/synthizer-rs"
license = "Unlicense"
keywords = ["audio", "gamedev"]

[dependencies]
synthizer-sys = { "path" = "../synthizer-sys", version = "0.10.1" }

lazy_static = "1.4.0"
asset_lru = { version = "0.0.3", optional = true }
scopeguard = "1.1.0"

[dev-dependencies]

# for examples that need multiple error types.
anyhow = "1.0.42"

[[example]]
name = "asset_lru"
required-features = ["asset_lru"]
